gitops/espresso/apps/nextcloud/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nextcloud
  labels:
    gateway-access: public
    pod-security.kubernetes.io/enforce: baseline
