gitops/espresso/apps/nextcloud/deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: valkey
  namespace: nextcloud
spec:
  replicas: 1
  selector:
    matchLabels:
      app: valkey
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: valkey
    spec:
      containers:
        - name: valkey
          image: valkey/valkey:9.1.2-alpine@sha256:3b83b0b6a598bb390c8186a408a69949772f439548a81c5ea0ab7ccf102c248d
          args:
            - --maxmemory
            - 256mb
            - --maxmemory-policy
            - allkeys-lru
            - --save
            - ""
            - --appendonly
            - "no"
          ports:
            - containerPort: 6379
              name: redis
          livenessProbe:
            tcpSocket:
              port: redis
            periodSeconds: 30
          readinessProbe:
            exec:
              command: ["valkey-cli", "ping"]
            periodSeconds: 10
          resources:
            requests:
              cpu: 25m
              memory: 64Mi
            limits:
              memory: 320Mi
