gitops/espresso/apps/nextcloud/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: nextcloud-internal
  namespace: nextcloud
spec:
  clusterIP: None
  publishNotReadyAddresses: true
  selector:
    app: nextcloud
  ports:
    - name: http
      port: 80
      targetPort: http
---
apiVersion: v1
kind: Service
metadata:
  name: nextcloud
  namespace: nextcloud
spec:
  selector:
    app: nextcloud
  ports:
    - name: http
      port: 80
      targetPort: http
---
apiVersion: v1
kind: Service
metadata:
  name: notify-push
  namespace: nextcloud
spec:
  selector:
    app: nextcloud
  ports:
    - name: push
      port: 7867
      targetPort: push
---
apiVersion: v1
kind: Service
metadata:
  name: valkey
  namespace: nextcloud
spec:
  selector:
    app: valkey
  ports:
    - name: redis
      port: 6379
      targetPort: redis
